--- a/index.html
+++ b/index.html
@@ -71,12 +71,12 @@
 
     <section class="hero">
 
-        <div class="hero-content">
+        <div class="hero-text">
 
             <h1>Monte seu Setup Gamer Perfeito</h1>
 
             <p>
-                🚀 Evolua seu jogo com equipamentos de alto nível.
+                🚀 Equipamentos de alta performance para elevar sua gameplay ao máximo.
             </p>
 
             <div class="hero-buttons">
@@ -85,12 +85,16 @@
                     Todos os Produtos
                 </a>
 
-                <a href="categorias.html?cat=cadeiras" class="btn-hero secondary">
+                <a href="#" class="btn-hero secondary">
                     Fale Conosco
                 </a>
 
             </div>
 
+        </div>
+
+        <div class="hero-image">
+            <img src="./images/setup-image.png" alt="Setup Gamer Completo">
         </div>
 
     </section>
@@ -152,6 +156,7 @@
     </section>
 
 </main>
+
 
 <footer>
 
