Atualizando os arquivos categoria.html e style.css
Adicionando as imagens dos produtos e estilizando.

--- a/categoria.html
+++ b/categoria.html
@@ -32,9 +32,7 @@
     <div class="user-actions">
 
         <a href="#" class="login">👤 Minha Conta</a>
-
         <a href="#" class="favorites">❤️ Favoritos</a>
-
         <a href="#" class="cart">🛒 Carrinho</a>
 
     </div>
@@ -45,19 +43,13 @@
 
     <ul class="lista-categorias">
 
-        <li><a href="categorias.html?cat=cadeiras">Cadeiras</a></li>
-
-        <li><a href="categorias.html?cat=headset">Headset</a></li>
-
-        <li><a href="categorias.html?cat=microfone">Microfone</a></li>
-
-        <li><a href="categorias.html?cat=mouse">Mouse</a></li>
-
-        <li><a href="categorias.html?cat=pc-gamer">PC Gamer</a></li>
-
-        <li><a href="categorias.html?cat=teclado">Teclados</a></li>
-
-        <li><a href="categorias.html?cat=videogame">Video Game</a></li>
+        <li><a href="categoria.html?cat=cadeiras">Cadeiras</a></li>
+        <li><a href="categoria.html?cat=headset">Headset</a></li>
+        <li><a href="categoria.html?cat=microfone">Microfone</a></li>
+        <li><a href="categoria.html?cat=mouse">Mouse</a></li>
+        <li><a href="categoria.html?cat=pc-gamer">PC Gamer</a></li>
+        <li><a href="categoria.html?cat=teclado">Teclados</a></li>
+        <li><a href="categoria.html?cat=videogame">Video Game</a></li>
 
     </ul>
 
@@ -67,292 +59,223 @@
 
     <section class="categoria-header">
 
-        <h1 id="categoria-nome">
-            Categoria
-        </h1>
+        <h1 id="categoria-nome">Categoria</h1>
 
-        <p>
-            Confira todos os produtos disponíveis
-        </p>
+        <p>Confira todos os produtos disponíveis</p>
 
     </section>
 
+
     <section class="categoria-produtos">
 
-        <ul id="lista-produtos">
 
-            <li>
+        <div class="categoria-bloco">
+
+            <h2>Cadeira</h2>
+
+            <ul class="lista-produtos">
+
+                <li>
+                    <article class="produto-card">
+                        <img src="./images/produtos/cadeiras/cadeira-verde.png">
+                        <h3>Cadeira Gamer Verde</h3>
+                        <p class="preco">R$ 1.599,00</p>
+                        <a href="produto.html?id=3" class="btn-detalhes">Ver detalhes</a>
+                    </article>
+                </li>
 
-                <article class="produto-card">
+                <li>
+                    <article class="produto-card">
+                        <img src="./images/produtos/cadeiras/cadeira-vermelha.png">
+                        <h3>Cadeira Gamer Vermelha</h3>
+                        <p class="preco">R$ 1.899,00</p>
+                        <a href="produto.html?id=4" class="btn-detalhes">Ver detalhes</a>
+                    </article>
+                </li>
 
-                    <img src="./images/produtos/cadeiras/cadeira-verde.png" alt="Cadeira Gamer Verde">
+                <li>
+                    <article class="produto-card">
+                        <img src="./images/produtos/cadeiras/cadeira-azul.png">
+                        <h3>Cadeira Gamer Azul</h3>
+                        <p class="preco">R$ 1.599,00</p>
+                        <a href="produto.html?id=5" class="btn-detalhes">Ver detalhes</a>
+                    </article>
+                </li>
 
-                    <h3>Cadeira Gamer Verde</h3>
+            </ul>
 
-                    <p class="preco">R$ 1.599,00</p>
+        </div>
 
-                    <a href="produto.html?id=3" class="btn-detalhes">
-                        Ver detalhes
-                    </a>
 
-                </article>
+        <div class="categoria-bloco">
 
-            </li>
+            <h2>Headset</h2>
 
-            <li>
+            <ul class="lista-produtos">
 
-                <article class="produto-card">
+                <li>
+                    <article class="produto-card">
+                        <img src="./images/produtos/headset/headset-branco.png">
+                        <h3>Headset Branco</h3>
+                        <p class="preco">R$ 499,00</p>
+                        <a href="produto.html?id=6" class="btn-detalhes">Ver detalhes</a>
+                    </article>
+                </li>
 
-                    <img src="./images/produtos/cadeiras/cadeira-vermelha.png" alt="Cadeira Gamer Vermelha">
+                <li>
+                    <article class="produto-card">
+                        <img src="./images/produtos/headset/headset-preto.png">
+                        <h3>Headset Preto</h3>
+                        <p class="preco">R$ 499,00</p>
+                        <a href="produto.html?id=7" class="btn-detalhes">Ver detalhes</a>
+                    </article>
+                </li>
 
-                    <h3>Cadeira Gamer Vermelha</h3>
+            </ul>
 
-                    <p class="preco">R$ 1.899,00</p>
+        </div>
 
-                    <a href="produto.html?id=4" class="btn-detalhes">
-                        Ver detalhes
-                    </a>
 
-                </article>
+        <div class="categoria-bloco">
 
-            </li>
+            <h2>Mouse</h2>
 
-            <li>
+            <ul class="lista-produtos">
+
+                <li>
+                    <article class="produto-card">
+                        <img src="./images/produtos/mouse/mouse-azul.png">
+                        <h3>Mouse Azul</h3>
+                        <p class="preco">R$ 250,00</p>
+                        <a href="produto.html?id=9" class="btn-detalhes">Ver detalhes</a>
+                    </article>
+                </li>
 
-                <article class="produto-card">
+                <li>
+                    <article class="produto-card">
+                        <img src="./images/produtos/mouse/mouse-rainbow.png">
+                        <h3>Mouse Rainbow</h3>
+                        <p class="preco">R$ 300,00</p>
+                        <a href="produto.html?id=10" class="btn-detalhes">Ver detalhes</a>
+                    </article>
+                </li>
 
-                    <img src="./images/produtos/cadeiras/cadeira-azul.png" alt="Cadeira Gamer Azul">
+                <li>
+                    <article class="produto-card">
+                        <img src="./images/produtos/mouse/mouse-verde.png">
+                        <h3>Mouse Verde</h3>
+                        <p class="preco">R$ 250,00</p>
+                        <a href="produto.html?id=11" class="btn-detalhes">Ver detalhes</a>
+                    </article>
+                </li>
 
-                    <h3>Cadeira Gamer Azul</h3>
+            </ul>
 
-                    <p class="preco">R$ 1.599,00</p>
+        </div>
 
-                    <a href="produto.html?id=5" class="btn-detalhes">
-                        Ver detalhes
-                    </a>
+        <div class="categoria-bloco">
 
-                </article>
+            <h2>Microfone</h2>
 
-            </li>
+            <ul class="lista-produtos">
 
-            <li>
+                <li>
+                    <article class="produto-card">
+                        <img src="./images/produtos/microfone/microfone.png">
+                        <h3>Microfone</h3>
+                        <p class="preco">R$ 300,00</p>
+                        <a href="produto.html?id=9" class="btn-detalhes">Ver detalhes</a>
+                    </article>
+                </li>
 
-                <article class="produto-card">
+            </ul>
 
-                    <img src="./images/produtos/headset/headset-branco.png" alt="Headset Branco">
+        </div>
 
-                    <h3>Headset Branco</h3>
+        <div class="categoria-bloco">
 
-                    <p class="preco">R$ 499,00</p>
+            <h2>PC Gamer</h2>
 
-                    <a href="produto.html?id=6" class="btn-detalhes">
-                        Ver detalhes
-                    </a>
+            <ul class="lista-produtos">
 
-                </article>
+                <li>
+                    <article class="produto-card">
+                        <img src="./images/produtos/pc-gamer/cpu-gamer.png">
+                        <h3>CPU</h3>
+                        <p class="preco">R$ 7.850,00</p>
+                        <a href="produto.html?id=9" class="btn-detalhes">Ver detalhes</a>
+                    </article>
+                </li>
 
-            </li>
+                <li>
+                    <article class="produto-card">
+                        <img src="./images/produtos/pc-gamer/notebook-gamer.png">
+                        <h3>Notebook</h3>
+                        <p class="preco">R$ 5.000,00</p>
+                        <a href="produto.html?id=10" class="btn-detalhes">Ver detalhes</a>
+                    </article>
+                </li>
 
-            <li>
+            </ul>
 
-                <article class="produto-card">
+        </div>
 
-                    <img src="./images/produtos/headset/headset-preto.png" alt="Headset Preto">
+        <div class="categoria-bloco">
 
-                    <h3>Headset Preto</h3>
+            <h2>Teclado</h2>
 
-                    <p class="preco">R$ 499,00</p>
+            <ul class="lista-produtos">
 
-                    <a href="produto.html?id=7" class="btn-detalhes">
-                        Ver detalhes
-                    </a>
+                <li>
+                    <article class="produto-card">
+                        <img src="./images/produtos/teclados/teclado-mecanico-branco.png">
+                        <h3>Teclado Mecânico Branco</h3>
+                        <p class="preco">R$ 470,00</p>
+                        <a href="produto.html?id=9" class="btn-detalhes">Ver detalhes</a>
+                    </article>
+                </li>
 
-                </article>
+                <li>
+                    <article class="produto-card">
+                        <img src="./images/produtos/teclados/teclado-mecanico-preto.png">
+                        <h3>Teclado Mecânico Preto</h3>
+                        <p class="preco">R$ 450,00</p>
+                        <a href="produto.html?id=10" class="btn-detalhes">Ver detalhes</a>
+                    </article>
+                </li>
 
-            </li>
+            </ul>
 
-            <li>
+        </div>
 
-                <article class="produto-card">
+        <div class="categoria-bloco">
 
-                    <img src="./images/produtos/microfone/microfone.png" alt="Microfone">
+            <h2>Video Game</h2>
 
-                    <h3>Microfone</h3>
+            <ul class="lista-produtos">
 
-                    <p class="preco">R$ 189,00</p>
+                <li>
+                    <article class="produto-card">
+                        <img src="./images/produtos/video-game/ps5.png">
+                        <h3>PS5</h3>
+                        <p class="preco">R$ 3.000,00</p>
+                        <a href="produto.html?id=9" class="btn-detalhes">Ver detalhes</a>
+                    </article>
+                </li>
 
-                    <a href="produto.html?id=8" class="btn-detalhes">
-                        Ver detalhes
-                    </a>
+                <li>
+                    <article class="produto-card">
+                        <img src="./images/produtos/video-game/jogos.png">
+                        <h3>Jogos PS5</h3>
+                        <p class="preco">R$ 300,00 cada</p>
+                        <a href="produto.html?id=10" class="btn-detalhes">Ver detalhes</a>
+                    </article>
+                </li>
 
-                </article>
+            </ul>
 
-            </li>
+        </div>
 
-            <li>
-
-                <article class="produto-card">
-
-                    <img src="./images/produtos/mouse/mouse-azul.png" alt="Mouse Azul">
-
-                    <h3>Mouse Azul</h3>
-
-                    <p class="preco">R$ 250,00</p>
-
-                    <a href="produto.html?id=9" class="btn-detalhes">
-                        Ver detalhes
-                    </a>
-
-                </article>
-
-            </li>
-
-            <li>
-
-                <article class="produto-card">
-
-                    <img src="./images/produtos/mouse/mouse-rainbow.png" alt="Mouse Rainbow">
-
-                    <h3>Mouse Rainbow</h3>
-
-                    <p class="preco">R$ 300,00</p>
-
-                    <a href="produto.html?id=10" class="btn-detalhes">
-                        Ver detalhes
-                    </a>
-
-                </article>
-
-            </li>
-
-            <li>
-
-                <article class="produto-card">
-
-                    <img src="./images/produtos/mouse/mouse-verde.png" alt="Mouse Verde">
-
-                    <h3>Mouse Verde</h3>
-
-                    <p class="preco">R$ 250,00</p>
-
-                    <a href="produto.html?id=11" class="btn-detalhes">
-                        Ver detalhes
-                    </a>
-
-                </article>
-
-            </li>
-
-            <li>
-
-                <article class="produto-card">
-
-                    <img src="./images/produtos/pc-gamer/cpu-gamer.png" alt="CPU Gamer">
-
-                    <h3>CPU Gamer</h3>
-
-                    <p class="preco">R$ 7.000,00</p>
-
-                    <a href="produto.html?id=12" class="btn-detalhes">
-                        Ver detalhes
-                    </a>
-
-                </article>
-
-            </li>
-
-            <li>
-
-                <article class="produto-card">
-
-                    <img src="./images/produtos/pc-gamer/notebook-gamer.png" alt="Notebook Gamer">
-
-                    <h3>Notebook Gamer</h3>
-
-                    <p class="preco">R$ 4.800,00</p>
-
-                    <a href="produto.html?id=13" class="btn-detalhes">
-                        Ver detalhes
-                    </a>
-
-                </article>
-
-            </li>
-
-            <li>
-
-                <article class="produto-card">
-
-                    <img src="./images/produtos/teclados/teclado-mecanico-branco.png" alt="Teclado Branco">
-
-                    <h3>Teclado Branco</h3>
-
-                    <p class="preco">R$ 200,00</p>
-
-                    <a href="produto.html?id=14" class="btn-detalhes">
-                        Ver detalhes
-                    </a>
-
-                </article>
-
-            </li>
-
-            <li>
-
-                <article class="produto-card">
-
-                    <img src="./images/produtos/teclados/teclado-mecanico-preto.png" alt="Teclado Preto">
-
-                    <h3>Teclado Preto</h3>
-
-                    <p class="preco">R$ 200,00</p>
-
-                    <a href="produto.html?id=15" class="btn-detalhes">
-                        Ver detalhes
-                    </a>
-
-                </article>
-
-            </li>
-
-            <li>
-
-                <article class="produto-card">
-
-                    <img src="./images/produtos/video-game/ps5.png" alt="PS5">
-
-                    <h3>PS5</h3>
-
-                    <p class="preco">R$ 3.400,00</p>
-
-                    <a href="produto.html?id=16" class="btn-detalhes">
-                        Ver detalhes
-                    </a>
-
-                </article>
-
-            </li>
-
-            <li>
-
-                <article class="produto-card">
-
-                    <img src="./images/produtos/video-game/jogos.png" alt="Jogos PS5">
-
-                    <h3>JogosPS5</h3>
-
-                    <p class="preco">R$ 160,00</p>
-
-                    <a href="produto.html?id=17" class="btn-detalhes">
-                        Ver detalhes
-                    </a>
-
-                </article>
-
-            </li>
-
-
-        </ul>
 
     </section>
 
@@ -365,26 +288,24 @@
 
         <div class="footer-info">
 
-            <p class="footer-text">
-                Projeto desenvolvido por:
-            </p>
+            <p class="footer-text">Projeto desenvolvido por:</p>
 
             <div class="footer-devs">
 
-                <!-- Luana -->
                 <a href="https://www.linkedin.com/in/luanaleteia"
-                   target="_blank" class="footer-link">
+                   target="_blank"
+                   class="footer-link">
 
-                    <img src="./images/linkedin-icon.svg" alt="LinkedIn Luana Letéia">
+                    <img src="./images/linkedin-icon.svg">
                     <span>Luana Letéia</span>
 
                 </a>
 
-                <!-- Hugo -->
                 <a href="https://www.linkedin.com/in/hugo-batista89"
-                   target="_blank" class="footer-link">
+                   target="_blank"
+                   class="footer-link">
 
-                    <img src="./images/linkedin-icon.svg" alt="LinkedIn Hugo Batista">
+                    <img src="./images/linkedin-icon.svg">
                     <span>Hugo Batista</span>
 
                 </a>
@@ -400,6 +321,9 @@
     </div>
 
 </footer>
+
+
+
 
 <script>
 
