--- a/index.html
+++ b/index.html
@@ -123,6 +123,24 @@
 
             </li>
 
+            <li>
+
+                <article class="produto-card">
+
+                    <img src="./images/produtos/microfone/microfone.png" alt="Microfone">
+
+                    <h3>Microfone</h3>
+
+                    <p class="preco">R$ 300,00</p>
+
+                    <a href="produto.html?id=1" class="btn-detalhes">
+                        Ver produto
+                    </a>
+
+                </article>
+
+            </li>
+
         </ul>
 
     </section>
@@ -137,11 +155,47 @@
 
                 <article class="produto-card">
 
-                    <img src="./images/produtos/headset/headset-preto.png" alt="Headset Gamer Pro">
+                    <img src="./images/produtos/headset/headset-preto.png" alt="Headset Preto">
 
-                    <h3>Headset Gamer Pro</h3>
+                    <h3>Headset Preto</h3>
 
                     <p class="preco">R$ 499,00</p>
+
+                    <a href="produto.html?id=2" class="btn-detalhes">
+                        Ver produto
+                    </a>
+
+                </article>
+
+            </li>
+
+            <li>
+
+                <article class="produto-card">
+
+                    <img src="./images/produtos/teclados/teclado-mecanico-branco.png" alt="Teclado Mecânico Branco">
+
+                    <h3>Teclado Mecânico Branco</h3>
+
+                    <p class="preco">R$ 470,00</p>
+
+                    <a href="produto.html?id=2" class="btn-detalhes">
+                        Ver produto
+                    </a>
+
+                </article>
+
+            </li>
+
+            <li>
+
+                <article class="produto-card">
+
+                    <img src="./images/produtos/mouse/mouse-rainbow.png" alt="Mouse Rainbow">
+
+                    <h3>Mouse Rainbow</h3>
+
+                    <p class="preco">R$ 300,00</p>
 
                     <a href="produto.html?id=2" class="btn-detalhes">
                         Ver produto
