--- a/categoria.html
+++ b/categoria.html
@@ -12,6 +12,7 @@
 
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="responsive.css">
 
     <title>Categoria – Loja do Dev</title>
 </head>
